fix hero`s background

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -361,7 +361,7 @@ h6 {
   position: relative;
   height: 941px;
   background-color: #182230;
-  background-image: url("../../../image/hero/hero-background.webp");
+  background-image: url("../../image/hero/hero-background.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
