--- a/style/scss/sections/_hero.scss
+++ b/style/scss/sections/_hero.scss
@@ -5,7 +5,7 @@
 	position: relative;
 	height: 941px;
 	background-color: $primary-header;
-	background-image: url('../../../image/hero/hero-background.webp');
+	background-image: url('../../image/hero/hero-background.webp');
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
