--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -8,4 +8,8 @@
 @use "./components/button";
 @use "./sections/hero";
 @use "./sections/stages";
+@use "./sections/sticker";
+@use "./sections/payments";
+@use "./sections/guarantees";
+@use "./sections/vacancies";
 @use "./media";
