--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -12,4 +12,5 @@
 @use "./sections/payments";
 @use "./sections/guarantees";
 @use "./sections/vacancies";
+@use "./sections/requirements";
 @use "./media";
