--- a/style/css/style.css
+++ b/style/css/style.css
@@ -658,8 +658,8 @@ h6 {
   margin-bottom: 32px;
 }
 .payments__list-item {
-  width: 256px;
-  height: 298px;
+  width: calc((100% - 80px) / 5);
+  min-height: 298px;
   background-color: #f6f6f7;
   border-radius: 24px;
   padding: 24px;
@@ -928,6 +928,92 @@ h6 {
   font-size: 14px;
   color: #0c1625;
   cursor: pointer;
+}
+
+.requirements {
+  padding: 100px 40px;
+  background-color: #fff;
+}
+.requirements__title {
+  color: #0c1625;
+  font-size: 50px;
+  margin-bottom: 40px;
+}
+.requirements__content {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 24px;
+}
+.requirements__block {
+  position: relative;
+  background-color: #f6f6f7;
+  border-radius: 24px;
+  min-height: 298px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.requirements__block-title {
+  color: #0c1625;
+  font-size: 20px;
+}
+.requirements__block:nth-child(-n+3) .requirements__block-img-container {
+  width: 56px;
+  height: 56px;
+  background-color: #fff;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: auto;
+}
+.requirements__block:nth-child(-n+3) .requirements__block-img {
+  width: 24px;
+  height: 24px;
+}
+.requirements__block:nth-child(4) {
+  grid-column: 4/6;
+}
+.requirements__block:nth-child(4) .requirements__block-text {
+  color: #6f757e;
+  font-size: 16px;
+  max-width: 377px;
+}
+.requirements__block:nth-child(5) {
+  grid-column: 1/6;
+  grid-row: 2;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.requirements__block:nth-child(5) .requirements__conditions {
+  max-width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.requirements__block:nth-child(5) .requirements__block-text {
+  color: #0c1625;
+  font-size: 16px;
+}
+.requirements__block:nth-child(5) .requirements__conditions-list {
+  list-style-type: square;
+  margin-left: 16px;
+}
+.requirements__block:nth-child(5) .requirements__conditions-list li::marker {
+  color: #566a84;
+}
+.requirements__block:nth-child(5) .requirements__conditions-item {
+  color: #0c1625;
+  font-size: 16px;
+  margin-bottom: 6px;
+}
+.requirements__block:nth-child(5) .requirements__conditions-img {
+  position: absolute;
+  top: 24px;
+  right: 61px;
+  pointer-events: none;
 }
 
 /* ========================================= Mobile (360px) ========================================= */
