add style for all blocks, fix classes on h1-h6, ul, li, p

--- a/style/scss/layout/_footer.scss
+++ b/style/scss/layout/_footer.scss
@@ -3,7 +3,7 @@
 
 .footer {
 	background-color: $surface;
-	padding: 0 $spacing-xxxl-desktop $spacing-xxxl-desktop;
+	padding: $spacing-xxl-desktop $spacing-xxxl-desktop $spacing-xxxl-desktop;
 	margin-top: auto;
 
 	display: flex;
