--- a/style/scss/sections/_payments.scss
+++ b/style/scss/sections/_payments.scss
@@ -49,18 +49,18 @@
 			gap: 2px;
 		}
 
-		.payments__city-title {
+		.payments__city-content h6 {
 			font-size: $text-sm-desktop;
 			color: $text-medium;
 		}
 
-		.payments__city-text {
+		.payments__city-content span {
 			font-size: $text-md-desktop;
 			color: $text-default;
 		}
 	}
 
-	&__list {
+	&__content ul {
 		display: flex;
 		flex-wrap: wrap;
 		gap: $spacing-md-desktop;
@@ -68,7 +68,7 @@
 		margin-bottom: $spacing-xxl-desktop;
 	}
 
-	&__list-item {
+	&__content li {
 		width: calc((100% - ($spacing-md-desktop * 4)) / 5);
 		min-height: 298px;
 		background-color: $surface;
@@ -79,13 +79,13 @@
 		justify-content: space-between;
 	}
 
-	&__item-value {
+	&__content li h5 {
 		@include headline;
 		font-size: $heading-5-desktop;
 		color: $text-default;
 	}
 
-	&__item-text {
+	&__content li p {
 		font-size: $text-md-desktop;
 		color: $text-default;
 	}
@@ -95,7 +95,7 @@
 		margin-bottom: $spacing-xxxl-desktop;
 	}
 
-	&__note-text {
+	&__note span {
 		font-size: $text-md-desktop;
 		color: $text-medium;
 	}
