--- a/style/scss/sections/_requirements.scss
+++ b/style/scss/sections/_requirements.scss
@@ -1,16 +1,17 @@
 @use "../abstracts/variables" as *;
 
 .requirements {
-	padding: 100px 40px;
+
 	background-color: $background;
 
 	&__title {
 		color: $text-default;
 		font-size: $heading-2-desktop;
-		margin-bottom: 40px;
+		margin: 100px 40px 40px;
 	}
 
 	&__content {
+		padding: 0 40px 100px;
 		display: grid;
 		grid-template-columns: repeat(5, 1fr);
 		grid-template-rows: repeat(2, auto);
@@ -27,7 +28,7 @@
 		flex-direction: column;
 		justify-content: space-between;
 
-		&-title {
+		& h4 {
 			color: $text-default;
 			font-size: $heading-6-desktop;
 		}
@@ -54,7 +55,7 @@
 			grid-column: 4 / 6;
 
 
-			.requirements__block-text {
+			.requirements__block p {
 				color: $text-medium;
 				font-size: $text-md-desktop;
 				max-width: 377px;
@@ -74,12 +75,12 @@
 				gap: 24px;
 			}
 
-			.requirements__block-text {
+			.requirements__block p {
 				color: $text-default;
 				font-size: $text-md-desktop;
 			}
 
-			.requirements__conditions-list {
+			.requirements__conditions ul {
 				list-style-type: square;
 				margin-left: $spacing-sm-desktop;
 
@@ -88,7 +89,7 @@
 				}
 			}
 
-			.requirements__conditions-item {
+			.requirements__conditions li {
 				color: $text-default;
 				font-size: $text-md-desktop;
 				margin-bottom: 6px;
