--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -13,4 +13,7 @@
 @use "./sections/guarantees";
 @use "./sections/vacancies";
 @use "./sections/requirements";
+@use "./sections/training";
+@use "./sections/faq";
+@use "./sections/address";
 @use "./media";
